infra-k8s/k8s/infra/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lxp
  labels:
    app.kubernetes.io/name: lxp
