infra-k8s/k8s/infra/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lxp-ingress
  namespace: lxp
spec:
  ingressClassName: nginx
  rules:
    - host: api.lxp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lxp-gateway
                port:
                  number: 8080
